--- a/hw3d/hw3d.vcxproj
+++ b/hw3d/hw3d.vcxproj
@@ -151,8 +151,8 @@
     <ClCompile Include="Bindable.cpp" />
     <ClCompile Include="Box.cpp" />
     <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="ChiliException.cpp" />
-    <ClCompile Include="ChiliTimer.cpp" />
+    <ClCompile Include="MyException.cpp" />
+    <ClCompile Include="AppTimer.cpp" />
     <ClCompile Include="Cylinder.cpp" />
     <ClCompile Include="Drawable.cpp" />
     <ClCompile Include="dxerr.cpp" />
@@ -194,9 +194,9 @@
     <ClInclude Include="Box.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="MyException.h" />
-    <ClInclude Include="ChiliMath.h" />
-    <ClInclude Include="ChiliTimer.h" />
-    <ClInclude Include="ChiliWin.h" />
+    <ClInclude Include="MyMath.h" />
+    <ClInclude Include="AppTimer.h" />
+    <ClInclude Include="PreDefineWin.h" />
     <ClInclude Include="Cone.h" />
     <ClInclude Include="ConstantBuffers.h" />
     <ClInclude Include="Cube.h" />
